--- a/nginx.conf
+++ b/nginx.conf
@@ -26,5 +26,10 @@ http {
             add_header Content-Type text/plain;
             return 200 $remote_addr;
         }
+
+        location /about {
+            add_header Content-Type text/plain;
+            return 200 "https://github.com/mota/ifconfig.cloud";
+        }
     }
 }
