Use X-Forwarded-For if provided

--- a/nginx.conf
+++ b/nginx.conf
@@ -17,13 +17,22 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    sendfile        on;
+    error_log stderr warn;
+    access_log /dev/stdout main;
+
     keepalive_timeout  65;
 
     server {
         listen 80;
+        listen 443;
+
         location / {
             add_header Content-Type text/plain;
+
+            if ($http_x_forwarded_for) {
+                return 200 $http_x_forwarded_for;
+            }
+
             return 200 $remote_addr;
         }
 
