--- a/nginx.conf
+++ b/nginx.conf
@@ -23,6 +23,8 @@ http {
     keepalive_timeout  65;
 
     server {
+        listen [::]:80;
+        listen [::]:443;
         listen 80;
         listen 443;
 
